fixing some layout issues

--- a/src/styles/modules/_block-staff-member.styl
+++ b/src/styles/modules/_block-staff-member.styl
@@ -54,6 +54,7 @@
       font-size $module-person-name-size-mobile
       line-height 1
       margin 0 0 rem(8px) 0
+      white-space initial
       +above(m)
         font-size $module-person-name-size-desktop
     h4
@@ -63,6 +64,7 @@
       font-style $module-person-title-style
       line-height $line-height-title
       margin 0
+      white-space initial
       +above(m)
         font-size $module-person-title-size-desktop
 
@@ -119,12 +121,13 @@
     
     > figure
       +above(m)
-        display inline-block
+        &.desktop
+          display inline-block
         width $module-person-contact-image-size-desktop
         margin 0
         border $module-person-contact-image-border-width-desktop solid $white
         vertical-align top
-    
+   
     .block--staff-member--name
       padding-left rem(12px)
       text-align left
